--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "googleapis": "^82.0.0",
+    "jquery": "^3.6.0",
     "nodemon": "^2.0.13"
   }
 }
