--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
+    "exceljs": "^4.3.0",
     "express": "^4.17.1",
     "googleapis": "^82.0.0",
     "jquery": "^3.6.0",
