--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /node_modules
-/auth/service_account_credentials.json
-/auth/protected_Data.json
+# /auth/service_account_credentials.json
+# /auth/protected_Data.json
