--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.6",
     "exceljs": "^4.3.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "googleapis": "^82.0.0",
     "jquery": "^3.6.0",
     "messagebird": "^3.7.1",
