--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "exceljs": "^4.3.0",
     "express": "^4.17.1",
